# rustlio

./: .gitignore  AGENTS.md  README.md  flake.nix
faithful_check/: README.md  compare.py  dump_flat.py  extract_upstream.py  pcap_to_mcap.py
faithful_check/cpp_ref/: CMakeLists.txt  ref_run.cpp
fastlio2/: CMakeLists.txt
fastlio2/config/: lio.yaml
localizer/src/localizers/: icp_localizer.cpp
loop_closure_bench/: CONCLUSIONS.md  README.md  results.tsv
loop_closure_bench/harness/: CMakeLists.txt  build_harness.sh  flake.nix  ivan_pgo.cpp  ivan_pgo.h  pgo_bench.cpp  plane_pgo.cpp  plane_pgo.h
loop_closure_bench/results/: benchmark_38bfa5c.md  go2_results_38bfa5c.tsv  go2_vs_gtsam_gt_55cb750.md  icp_gnc_backend_9e2e8ea.md  icp_huber_fitgate_e6d6ab5.md  indoor_hk_village_911fe05.md  new_scenes_5fddc4f.md  scancontext_vs_spatial_d691edc.md
loop_closure_bench/rust/: Cargo.toml  README.md  flake.nix
loop_closure_bench/rust/src/: icp.rs  io.rs  main.rs  pgo.rs  scan_context.rs
loop_closure_bench/scripts/: add_april_tags_to_db.py  add_apriltags_to_db.py  ate.py  bench_lib.py  build_gtsam_gt.py  export_dataset.py  export_kitti360.py  export_kitti_odometry.py  go2_eval.py  icp_eval.sh  kitti_results.tsv  make_groundtruth.py  probe_go2.py  rename_stream.py  results.tsv  run_all.py  run_bench.py  run_kitti.py  write_gtsam_odom_to_db.py
pgo/src/pgos/: simple_pgo.cpp  simple_pgo.h
reloc_bench/: .gitignore  README.md
reloc_bench/harness/: CMakeLists.txt  build.sh  flake.nix  global_reloc_bench.cpp  reloc_bench.cpp
reloc_bench/results/: baseline.json  baseline.md  comparison.md  fixed.json  g2_cppglobal_go2_5_32pm.json  g2_cppglobal_go2_6_05pm.json  g2_rust_go2_5_32pm.json  g2_rust_go2_6_05pm.json  g2_stock_go2_5_32pm.json  g2_stock_go2_6_05pm.json  go2_new_datasets.md  hk_rust.json  kitti_cppglobal.json  kitti_rust.json  outdoor_comparison.md  outdoor_global.json  outdoor_rust.json  outdoor_rust_v2.json  outdoor_stock.json  rust_vs_cpp.md  three_dataset_comparison.md
reloc_bench/scripts/: bench_reloc.py  gen_scenarios.py  reloc_lib.py  test_reloc.py
run/: add_gt  build  faithful_check  graph  pgo_bench  reloc_test  rerun
rust/: Cargo.toml  README.md
rust/src/: commons.rs  ieskf.rs  ikd_tree.rs  imu_processor.rs  lib.rs  lidar_processor.rs  logging.rs  main.rs  map_builder.rs  pcl_ffi.rs  so3.rs  utils.rs  voxel_grid.rs
rust/tests/: integration.rs
