[package]
name = "fastlio2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fastlio2"
path = "src/main.rs"

[[bin]]
name = "fastlio2-rerun"
path = "src/bin/rerun_viewer.rs"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
mcap = "0.9"
ndarray = "0.16"
ndarray-npy = "0.9"
rerun = "0.33"
cxx = { version = "1", optional = true }

[features]
pcl = ["dep:cxx"]

[dev-dependencies]
approx = "0.5"
