[package]
name = "fastlio_rs"
version = "0.2.1"
edition = "2021"
description = "Pure-Rust reimplementation of the FAST-LIO2 LiDAR-inertial odometry algorithm"
license = "GPL-2.0"
repository = "https://github.com/jeff-hykin/fastlio_rs"
readme = "README.md"
keywords = ["lidar", "slam", "odometry", "robotics", "fast-lio"]
categories = ["science::robotics"]

[[bin]]
name = "fastlio2"
path = "src/main.rs"

[[bin]]
name = "fastlio2-rerun"
path = "src/bin/rerun_viewer.rs"

[[bin]]
name = "odom_rrd"
path = "src/bin/odom_rrd.rs"

[[bin]]
name = "render"
path = "src/bin/render.rs"

[[bin]]
name = "reloc_rust"
path = "src/bin/reloc_rust.rs"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
mcap = "0.9"
ndarray = "0.16"
ndarray-npy = "0.9"
rayon = "1"
rerun = "0.33"
cxx = { version = "1", optional = true }

[features]
pcl = ["dep:cxx"]

[dev-dependencies]
approx = "0.5"
